:rotating_light: (refactor) rewrite using spring3.3 best-practises